// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeFile no preexisting code loadOrCreate: creates initial code 1`] = `
Array [
  "/path/tests/mytest.test.js",
  "const { launch } = require(\\"qawolf\\");
const selectors = require(\\"../selectors/mytest\\");

describe('mytest', () => {
  let browser;

  beforeAll(async () => {
    browser = await launch({ url: \\"http://localhost:3000\\" });
  });

  afterAll(() => browser.close());
  // 🐺 CREATE CODE HERE
});",
  "utf8",
]
`;

exports[`CodeFile patch saves patches for non-committed steps 1`] = `
"const { launch } = require(\\"qawolf\\");
const selectors = require(\\"../selectors/mytest\\");

describe('mytest', () => {
  let browser;

  beforeAll(async () => {
    browser = await launch({ url: \\"http://localhost:3000\\" });
  });

  afterAll(() => browser.close());
  
  it('can click \\"Learn React\\" link', async () => {
    await browser.click(selectors[0]);
  });
  
  it('can click \\"Learn React\\" link', async () => {
    await browser.click(selectors[1]);
  });
  // 🐺 CREATE CODE HERE
});"
`;

exports[`CodeFile patch saves patches for non-committed steps 2`] = `
"const { launch } = require(\\"qawolf\\");
const selectors = require(\\"../selectors/mytest\\");

describe('mytest', () => {
  let browser;

  beforeAll(async () => {
    browser = await launch({ url: \\"http://localhost:3000\\" });
  });

  afterAll(() => browser.close());
  
  it('can click \\"Learn React\\" link', async () => {
    await browser.click(selectors[0]);
  });
  
  it('can click \\"Learn React\\" link', async () => {
    await browser.click(selectors[1]);
  });
  
  it('can click \\"Docs\\" link', async () => {
    await browser.click(selectors[2], { page: 1 });
  });
  
  it('can click \\"Tutorial\\" link', async () => {
    await browser.click(selectors[3]);
  });
  
  it('can click \\"Blog\\" link', async () => {
    await browser.click(selectors[4]);
  });
  
  it('can click \\"Docs\\" link', async () => {
    await browser.click(selectors[5], { page: 2 });
  });
  
  it('can click \\"Tutorial\\" link', async () => {
    await browser.click(selectors[6]);
  });
  
  it('can click \\"Blog\\" link', async () => {
    await browser.click(selectors[7]);
  });
});"
`;
